--- a/Sprint-Challenge/DS_DataWrangling_KnowledgeCheck.ipynb
+++ b/Sprint-Challenge/DS_DataWrangling_KnowledgeCheck.ipynb
@@ -63,87 +63,147 @@
         "\n",
         "1. What is a Data Frame?\n",
         "```\n",
-        "your answer\n",
+        "A Data frame is a two-dimensional data structure.\n",
+        "Data is aligned in a tabular fashion in rows and columns.\n",
+        "Pandas DataFrame consists of three principal components,\n",
+        "the data, rows, and columns.\n",
         "```\n",
         "\n",
         "2. What is Pandas?\n",
         "```\n",
-        "your answer\n",
+        "Pandas is a software library written for\n",
+        "the Python programming language for data manipulation and analysis.\n",
         "```\n",
         "\n",
         "3. How do you check for missing values?\n",
         "```\n",
-        "your answer\n",
+        "# Count missing values in each column\n",
+        "df.isna().sum()\n",
+        "df.isnull().sum()\n",
+        "\n",
+        "# Count missing values in the entire DataFrame\n",
+        "df.isna().sum().sum()\n",
+        "df.isnull().sum().sum()\n",
         "```\n",
         "\n",
         "4. What is numpy?\n",
         "```\n",
-        "your answer\n",
+        "NumPy (Numerical Python) is an open-source Python library.\n",
         "```\n",
         "\n",
         "5. Explain the difference between tidy and wide (summary) data.\n",
         "```\n",
-        "your answer\n",
+        "In the tidy format, each column is a single variable, and each row is an observation.\n",
+        "In wide(spreadsheet-like) format is organized with multiple variables in the same row, making it less flexible and harder to work with.\n",
+        "\n",
         "```\n",
         "\n",
         "6. Explain the difference between categorical and quantitative data.\n",
         "```\n",
-        "your answer\n",
+        "Categorical data consists of names or labels used to represent qualities or characteristics.(color, names, types)\n",
+        "Quantitative data represents numerical values and can be measured and subjected to mathematical operations.(age,height, number of ...)\n",
         "```\n",
         "\n",
         "7. For categorical variables, explain the difference between an ordinal, nominal or identifier variable.\n",
         "```\n",
-        "your answer\n",
+        "Nominal variables-unordered, categories which are mutually exclusive like male/female, smoker/non-smoker\n",
+        "Ordinal variables - orderd, categories, which are mutually exclusive like IOTN 1/2/3/4/5 or minimal/moderate/severe/unberable pain\n",
         "```\n",
         "\n",
         "8. For quantitative variables, explain the difference between a discrete and a continuous variable.\n",
         "```\n",
-        "your answer\n",
+        "Discrete - Whole numerical value/counts(number of ..visits to disney, cars, children, pets)\n",
+        "Continuous - Can take any value within a range(hight, distance, time, salary)\n",
         "```\n",
         "\n",
         "9. Explain the differnece between an inner, outer, left and right merge.\n",
         "```\n",
-        "your answer\n",
+        "Inner merge (inner join) combines data from two datasets based on a common key, including only the rows that have matching key values in both datasets. Filters out non-matching rows, resulting in a dataset with data ONLY where the keys match in both datasets.\n",
+        "\n",
+        "Outer merge (outer join) includes all rows from both datasets in the result, filling in missing values with NaN or other specified fill values where there are no matches. This merge type retains all data from both datasets, ensuring that no information is lost, even if there are non-matching key values.\n",
+        "\n",
+        "Left merge (left join) takes all the rows from the left (first) dataset and the matching rows from the right (second) dataset based on the common key. Non-matching rows from the left dataset are included, while non-matching rows from the right dataset are excluded.\n",
+        "\n",
+        "Right merge (right join) is the opposite of a left merge. It includes all rows from the right dataset and the matching rows from the left dataset. Non-matching rows from the right dataset are included, while non-matching rows from the left dataset are excluded.\n",
         "```\n",
         "\n",
         "10. Explain the differnece between merging and concatenating data.\n",
         "```\n",
-        "your answer\n",
+        "Merging -  merge() is used for joining data frames based on a common column or key. Typically results in a new dataset with different structures.\n",
+        "\n",
+        "Concatenating - concat() is used for appending/combining/stacking data frames with the same structure either vertically or horizontally. Preserves the original structure without considering key values.\n",
         "```\n",
         "\n",
         "11. Explain the purpose of a function.\n",
         "```\n",
-        "your answer\n",
+        "Modularity -  smaller, manageable components.\n",
+        "Reusability - can be used multiple times.\n",
+        "Readability - easier to read code.\n",
         "```\n",
         "\n",
         "12. Explain what .apply() does.\n",
         "```\n",
-        "your answer\n",
+        ".apply() method is used to apply custom or build-in functions to a DataFrame.\n",
+        "df.apply(custom function, axis=0, *args, **kwargs)\n",
+        "#axis,args,kwargs are optional\n",
+        "\n",
+        "#example:\n",
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.DataFrame({'A': [1, 2, 3, 4], 'B': [5, 6, 7, 8]})\n",
+        "\n",
+        "# Define a custom function to square each element\n",
+        "def square(x):\n",
+        "    return x**2\n",
+        "\n",
+        "# Apply the function to each element of the DataFrame\n",
+        "df_squared = df.apply(square)\n",
+        "\n",
+        "# Apply a lambda function to calculate the mean of each column\n",
+        "column_mean = df.apply(lambda x: x.mean(), axis=0)\n",
+        "\n",
         "```\n",
         "\n",
         "13. Explain what .strip() does.\n",
         "```\n",
-        "your answer\n",
+        ".strip() removes leading and trailing whitespace. Any whitespaces in the middle of the string are preserved!\n",
+        "#Example:\n",
+        "text = \"   Keep   Middle   Unchanged   \"\n",
+        "cleaned_text = text.strip()\n",
+        "print(cleaned_text)  # Output: \"Keep   Middle   Unchanged\"\n",
+        "\n",
         "```\n",
         "\n",
         "14. Explain what .strip('%') does.\n",
         "```\n",
-        "your answer\n",
+        ".strip('%') method removes the percentage symbol (\"%\") from the beginning and end of a string.\n",
+        "#Example\n",
+        "percentage = \"25.00%\"\n",
+        "cleaned_percentage = percentage.strip('%')\n",
+        "print(cleaned_percentage)  # Output: \"25.00\"\n",
+        "\n",
         "```\n",
         "\n",
         "15. Explain what .split('-') does.\n",
         "```\n",
-        "your answer\n",
+        ".split('-') method is used to split a string into a list of substrings based on the hyphen (\"-\").\n",
+        "#example:\n",
+        "text = \"apple-orange-banana-grape\"\n",
+        "split_text = text.split('-')\n",
+        "print(split_text)  # Output: ['apple', 'orange', 'banana', 'grape']\n",
         "```\n",
         "\n",
         "16. Give an example of a misleading figure and how you would fix it.\n",
         "```\n",
-        "your answer\n",
+        "Truncated Y-Axis\n",
+        "\n",
+        "Problem: The y-axis starts at a value greater than zero.\n",
+        "Solution: Start the y-axis at zero to provide a more accurate representation of the data.\n",
         "```\n",
         "\n",
         "17. Describe the important fetures of the distribution of a quantitative variable.\n",
         "```\n",
-        "your answer\n",
+        "The shape of the distribution, the presence of outliers, the center, and the spread(SOCS).\n",
         "```"
       ]
     },
