--- a/Sprint-Challenge/DS_SprintChallenge_DataWranglingAndStorytelling.ipynb
+++ b/Sprint-Challenge/DS_SprintChallenge_DataWranglingAndStorytelling.ipynb
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "deletable": false,
         "nbgrader": {
@@ -95,7 +95,9 @@
       "outputs": [],
       "source": [
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()"
+        "#raise NotImplementedError()\n",
+        "\n",
+        "list_practice = ['bloom', 'data', 'python']"
       ]
     },
     {
@@ -172,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "deletable": false,
         "nbgrader": {
@@ -185,12 +187,58 @@
           "solution": true,
           "task": false
         },
-        "id": "8EmtetnE4e5U"
+        "id": "8EmtetnE4e5U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9e4d277-ad62-4035-a77e-f637ad7485ba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'bloom': 'tech', 'data': 'science', 'python': 'language'}\n"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()"
+        "#raise NotImplementedError()\n",
+        "values = ['tech', 'science', 'language']\n",
+        "\n",
+        "diction_practice = {}\n",
+        "\n",
+        "for key, value in zip(list_practice, values):\n",
+        "    diction_practice[key] = value\n",
+        "\n",
+        "print(diction_practice)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(diction_practice)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UqzsK5la1ll9",
+        "outputId": "d3a99fbf-de73-495e-ff7d-631d142ff795"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
       ]
     },
     {
@@ -265,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "deletable": false,
         "nbgrader": {
@@ -283,7 +331,32 @@
       "outputs": [],
       "source": [
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()"
+        "#raise NotImplementedError()\n",
+        "\n",
+        "diction_practice['python'] = 'programming_language'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(diction_practice)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dyym9BSI2DXN",
+        "outputId": "d3b5cd17-4ad7-4123-b981-fd609e46d29a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'bloom': 'tech', 'data': 'science', 'python': 'programming_language'}\n"
+          ]
+        }
       ]
     },
     {
@@ -390,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "deletable": false,
         "id": "FFO8QNJ7MixS",
@@ -403,9 +476,34 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49b396ec-5aa3-4f66-b824-1c221e427fb0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      geo  time  cell_phones_total\n",
+            "0     abw  1960                0.0\n",
+            "1     abw  1965                0.0\n",
+            "2     abw  1970                0.0\n",
+            "3     abw  1975                0.0\n",
+            "4     abw  1976                0.0\n",
+            "...   ...   ...                ...\n",
+            "9569  zwe  2015         12757410.0\n",
+            "9570  zwe  2016         12878926.0\n",
+            "9571  zwe  2017         14092104.0\n",
+            "9572  zwe  2018         12908992.0\n",
+            "9573  zwe  2019         13195902.0\n",
+            "\n",
+            "[9574 rows x 3 columns]\n"
+          ]
+        }
+      ],
       "source": [
         "# Task 4\n",
         "\n",
@@ -418,7 +516,10 @@
         "# Load the dataframe and print the top 5 rows\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n"
+        "#raise NotImplementedError()\n",
+        "cell_phones = pd.read_csv(cell_phones_url)\n",
+        "\n",
+        "print(cell_phones)\n"
       ]
     },
     {
@@ -483,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "deletable": false,
         "id": "SNWpDAvyUYa2",
@@ -496,9 +597,34 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca8237a0-6a32-4c9a-e6d0-958d7e4fb3f3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       geo  time  population_total\n",
+            "0      afg  1800           3280000\n",
+            "1      afg  1801           3280000\n",
+            "2      afg  1802           3280000\n",
+            "3      afg  1803           3280000\n",
+            "4      afg  1804           3280000\n",
+            "...    ...   ...               ...\n",
+            "59292  zwe  2096          30940779\n",
+            "59293  zwe  2097          30952208\n",
+            "59294  zwe  2098          30959811\n",
+            "59295  zwe  2099          30964052\n",
+            "59296  zwe  2100          30965421\n",
+            "\n",
+            "[59297 rows x 3 columns]\n"
+          ]
+        }
+      ],
       "source": [
         "# Task 5\n",
         "\n",
@@ -507,7 +633,10 @@
         "# Load the dataframe and print the first 5 records\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()"
+        "#raise NotImplementedError()\n",
+        "population = pd.read_csv(population_url)\n",
+        "\n",
+        "print(population)"
       ]
     },
     {
